# TiagoBears_PoseEstimation

./: CMakeLists.txt  README.md  lccp_out.pcd  lccp_out_2.pcd  package.xml  setup.py
include/TiagoBears_PoseEstimation/: pose_estimator.h
models/: cube3F.pcd  cube4F.pcd  cubeModel.ply  cubeModel2.pcd  cubeModel3.pcd  cubeModel4.pcd
msg/: cloud_clusters.msg
scripts/: pose_node.cpp
src/: cube.pcd  pose_estimator.cpp
srv/: PoseEstimation.srv  TableCornerDetection.srv
