<?xml version="1.0"?>
<package>
  <name>TiagoBears_PoseEstimation</name>
  <version>2.3.1</version>
  <description>TiagoBears_PoseEstimation</description>
  <maintainer email="dirk.schweickard@stud.tu-darmstadt.de">Dirk</maintainer>
  <author email="dirk.schweickard@stud.tu-darmstadt.de">Dirk</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
</package>